# Scientific-data-processing-backend-built-with-FastAPI

./: .gitignore  README.md  cpp.py  engine_test.py  pyproject.toml  python_test.py  requirements.txt  requirments.txt  test.cpp
.github/workflows/: tests.yml
api/: main.py
api/routes/: linalg.py
app/: __init__.py  config.py  logging_config.py  types.py
app/api/: __init__.py  main.py
app/api/models/: __init__.py  configs.py  requests.py  responses.py  schemas.py
app/api/routes/: __init__.py  admin.py  auth.py  linalg.py  notes.py  ode.py  stats.py
app/api/services/: security.py
app/db/: __init__.py  crud.py  database.py  models.py  schemas.py
app/engine/: __init__.py
app/engine/linalg/: __init__.py  decomp.py  determinants.py  eigen.py  eigens.py  inverses.py  matrix_arithmetic.py  traces.py  transpose.py  transposes.py
app/engine/ode/: __init__.py  solvers.py
app/engine/stats/: __init__.py  maxs.py  means.py  mins.py  stds.py  summary.py  vars.py
app/engine/utils/: __init__.py  exceptions.py  formatting.py  validation.py
cpp_math/: CMakeLists.txt  README.md  pyproject.toml  run.bat
cpp_math/bindings/: bindings.cpp
cpp_math/examples/: vector_demo.cpp
cpp_math/include/: Matrix.hpp  Vector.hpp  exceptions.hpp  validation.hpp
cpp_math/matrix_engine/: __init__.py  __init__.pyi
cpp_math/python/: bindings.cpp
cpp_math/src/: Matrix.cpp  Vector.cpp
cpp_math/tests/cpp/: test_matrix_basics.cpp  test_matrix_linalg.cpp  test_matrix_logic.cpp  test_templates.cpp  test_validation.cpp  test_vector_basics.cpp  test_vector_logic.cpp
cpp_math/tests/python/: run_tests.py  test_matrix_basics.py  test_matrix_linalg.py  test_matrix_logic.py  test_validation_api.py  test_vector_basics.py  test_vector_logic.py
engine/: __init__.py
engine/linalg/: __init__.py  determinants.py
examples_C++/: benchmark.py  matrix_demo.py  matrix_vector_demo.py  vector_demo.py
frontend/: admin.html  index.html  linalg_api.html  login.html  notes.html  ode_api.html  stats_api.html
frontend/css/: linalg_api.css  ode_api.css  stats_api.css  style.css
frontend/js/: admin.js  api_errors.js  linear_algebra_api.js  login.js  notes.js  ode_api.js  result_formatter.js  stats_api.js
scientific_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: stat_test.py  test_api.py  test_config.py  test_ode.py  tests_linalg.py
