[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific-api"
version = "0.1.0"

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pandas",
    "scipy",
    "pydantic",
    "sqlalchemy",
    "psycopg2-binary",
    "bcrypt",
    "python-jose"
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx"
]

[tool.setuptools.packages.find]
include = ["app*"]
